--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                 <div id="projects" class="tab-content">
                     <div class="command-line">
                         <span class="prompt">$</span>
-                        <span>fetching projects from github.com/guilherme_0u1...</span>
+                        <span>fetching projects from github.com/guilherme0u1...</span>
                     </div>
                     
                     <div id="projects-list" class="my-4">
