--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                         <p class="text-green-400">$ cat contact.txt</p>
                         <div class="ml-8">
                             <p><i class="fas fa-envelope mr-2"></i> Email: <a href="mailto:guilhermedasilvabertoso@gmail.com" class="text-blue-400 hover:underline">guilhermedasilvabertoso@gmail.com</a></p>
-                            <p><i class="fab fa-github mr-2"></i> GitHub: <a href="https://github.com/guilherme_0u1" target="_blank" class="text-blue-400 hover:underline">github.com/guilherme_0u1</a></p>
+                            <p><i class="fab fa-github mr-2"></i> GitHub: <a href="https://github.com/guilherme0u1" target="_blank" class="text-blue-400 hover:underline">github.com/guilherme0u1</a></p>
                         </div>
                     </div>
                     
