--- a/index.html
+++ b/index.html
@@ -303,6 +303,7 @@
                                 <span class="skill-badge bg-green-600">Godot Engine</span>
                                 <span class="skill-badge bg-gray-600">Git</span>
                                 <span class="skill-badge bg-purple-600">Unreal Engine</span>
+                                <span class="skill-badge bg-purple-600">Blender</span>
                             </div>
                             
                             <h3 class="text-lg font-bold mt-4 mb-2">Others:</h3>
