--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                         </div>
                         <div class="flex justify-between">
                             <span>CPU:</span>
-                            <span class="text-green-400">Intel i7</span>
+                            <span class="text-green-400">AMD Ryzen 7 5700</span>
                         </div>
                     </div>
                 </div>
