--- a/index.html
+++ b/index.html
@@ -208,6 +208,14 @@
                             <span>CPU:</span>
                             <span class="text-green-400">AMD Ryzen 7 5700</span>
                         </div>
+                        <div class="flex justify-between">
+                            <span>GPU:</span>
+                            <span class="text-green-400">AMD RX 7600</span>
+                        </div>
+                        <div class="flex justify-between">
+                            <span>Ram memory:</span>
+                            <span class="text-green-400">16 GB DDR4 3200MHZ</span>
+                        </div>
                     </div>
                 </div>
             </div>
