--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                         </div>
                         <div class="flex justify-between">
                             <span>Ram memory:</span>
-                            <span class="text-green-400">16 GB DDR4 3200MHZ</span>
+                            <span class="text-green-400">16 GB 3200MHZ DDR4</span>
                         </div>
                     </div>
                 </div>
