--- a/index.html
+++ b/index.html
@@ -514,3 +514,7 @@
                             </script>
                         </body>
                         </html>
+<footer>
+  <p>&copy; 2025 Guilherme da Silva Bertoso. This website and its contents are protected by copyright law. Unauthorized copying or reuse is prohibited.</p>
+</footer>
+
