--- a/index.html
+++ b/index.html
@@ -314,6 +314,8 @@
                                 <span class="skill-badge bg-gray-600">Git</span>
                                 <span class="skill-badge bg-purple-600">Unreal Engine</span>
                                 <span class="skill-badge bg-purple-600">Blender</span>
+                                <span class="skill-badge bg-purple-600">Krita</span>
+                                <span class="skill-badge bg-purple-600">Aseprite</span>
                             </div>
                             
                             <h3 class="text-lg font-bold mt-4 mb-2">Others:</h3>
